fix: Employee mapper, image save to string in DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/employee_manager
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 # hibernate does not create or update automatically the schema (tables, attributes, etc)
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 # set flyway migration location to /src/main/resources/db/migration
 # enabled by default, just leave it here
 spring.jpa.open-in-view=true
