--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,9 @@ dependencies {
     implementation 'javax.validation:validation-api:2.0.1.Final'
 	implementation 'javax.validation:validation-api:2.0.1.Final'
 	implementation 'javax.validation:validation-api:2.0.1.Final'
+	implementation 'org.flywaydb:flyway-core'
 	compileOnly 'org.projectlombok:lombok'
+
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
