--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,17 @@
+server.port=8080
 
 # choose the database that is already created earlier
 spring.datasource.url=jdbc:postgresql://localhost:5432/employee_manager
 # configure the authentication to the database
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.flyway.locations=classpath:/db/migration
 # hibernate does not create or update automatically the schema (tables, attributes, etc)
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=none
 # set flyway migration location to /src/main/resources/db/migration
 # enabled by default, just leave it here
 spring.jpa.open-in-view=true
+
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC+3
+spring.jackson.time-zone=Indian/Antananarivo
