--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.jpa.open-in-view=true
 
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC+3
 spring.jackson.time-zone=Indian/Antananarivo
+
+spring.session.store-type=jdbc
