--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,4 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC+3
 spring.jackson.time-zone=Indian/Antananarivo
 
 spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
