--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=8080
 
 # choose the database that is already created earlier
-spring.datasource.url=jdbc:postgresql://localhost:5432/employee_manager
+#spring.datasource.url=jdbc:postgresql://localhost:5432/employee_manager
 # configure the authentication to the database
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
 spring.flyway.locations=classpath:/db/migration
 # hibernate does not create or update automatically the schema (tables, attributes, etc)
 spring.jpa.show-sql=false
@@ -18,3 +18,17 @@ spring.jackson.time-zone=Indian/Antananarivo
 
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
+
+datasource.cnaps.driver-class-name=org.postgresql.Driver
+datasource.cnaps.url=jdbc:postgresql://localhost:5432/cnaps
+datasource.cnaps.username=postgres
+datasource.cnaps.password=postgres
+datasource.cnaps.initialize=true
+
+datasource.company.driver-class-name=org.postgresql.Driver
+datasource.company.url=jdbc:postgresql://localhost:5432/employee_manager
+datasource.company.username=postgres
+datasource.company.password=postgres
+datasource.company.initialize=true
+
+spring.flyway.enabled=false
