--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,7 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC+3
 spring.jackson.time-zone=Indian/Antananarivo
 
 spring.session.store-type=jdbc
+spring.session.jdbc.table-name=spring_session
 spring.session.jdbc.initialize-schema=always
 
 datasource.cnaps.driver-class-name=org.postgresql.Driver
