fixUp: sql double database p2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,12 +24,12 @@ datasource.cnaps.driver-class-name=org.postgresql.Driver
 datasource.cnaps.url=jdbc:postgresql://localhost:5432/cnaps
 datasource.cnaps.username=postgres
 datasource.cnaps.password=postgres
-datasource.cnaps.initialize=true
+datasource.cnaps.initialize=false
 
 datasource.company.driver-class-name=org.postgresql.Driver
 datasource.company.url=jdbc:postgresql://localhost:5432/employee_manager
 datasource.company.username=postgres
 datasource.company.password=postgres
-datasource.company.initialize=true
+datasource.company.initialize=false
 
 spring.flyway.enabled=false
