fix: double database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,7 @@ server.port=8080
 #spring.datasource.password=postgres
 spring.flyway.locations=classpath:/db/migration
 # hibernate does not create or update automatically the schema (tables, attributes, etc)
-spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=none
+
 # set flyway migration location to /src/main/resources/db/migration
 # enabled by default, just leave it here
 spring.jpa.open-in-view=true
@@ -20,16 +19,4 @@ spring.session.store-type=jdbc
 spring.session.jdbc.table-name=spring_session
 spring.session.jdbc.initialize-schema=always
 
-datasource.cnaps.driver-class-name=org.postgresql.Driver
-datasource.cnaps.url=jdbc:postgresql://localhost:5432/cnaps
-datasource.cnaps.username=postgres
-datasource.cnaps.password=postgres
-datasource.cnaps.initialize=false
-
-datasource.company.driver-class-name=org.postgresql.Driver
-datasource.company.url=jdbc:postgresql://localhost:5432/employee_manager
-datasource.company.username=postgres
-datasource.company.password=postgres
-datasource.company.initialize=false
-
-spring.flyway.enabled=false
+spring.jpa.properties.hibernate.physical_naming_strategy=com.hei.project2p1.utils.hibernate.naming.CamelCaseToSnakeCaseNamingStrategy
