feat: setup env variable

--- a/src/main/resources/persistence-multiple-db.properties
+++ b/src/main/resources/persistence-multiple-db.properties
@@ -1,10 +1,10 @@
 jdbc.driverClassName=org.postgresql.Driver
-company.jdbc.url=jdbc:postgresql://localhost:5432/employee_manager
-company.jdbc.user=postgres
-company.jdbc.pass=postgres
-cnaps.jdbc.url=jdbc:postgresql://localhost:5432/cnaps
-cnaps.jdbc.user=postgres
-cnaps.jdbc.pass=postgres
+company.jdbc.url=${COMPANY_JDBC_URL}
+company.jdbc.user=${COMPANY_JDBC_USER}
+company.jdbc.pass=${COMPANY_JDBC_PASS}
+cnaps.jdbc.url=${CNAPS_JDBC_URL}
+cnaps.jdbc.user=${CNAPS_JDBC_USER}
+cnaps.jdbc.pass=${CNAPS_JDBC_PASS}
 
 
 spring.jpa.show-sql=false
